@@ -42,6 +42,9 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - Fixed a null pointer dereference seg-fault when checking for disallowed types
       TRQ-1408.
   b - Fix a counting problem when running multi-req ALPS jobs (cray only). TRQ-1431.
+  b - Remove red herring error messages 'did not find work task for local request'.
+      These tasks are no longer created since issue_Drequest blocks until it gets the
+      reply and then processes it. TRQ-1423.
 
 4.1.3
   b - fix a security loophole that potentially allowed an interactive job to run 
